crates/wac-parser/tests/resolution/fail/mismatched-func-param-name.wac
import x: interface {
    f: func(b: u32);
};

let i = new foo:bar { x };
